<resources>
    <string name="app_name">Vue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maj_photo">Changer de photo de profil</string>
    <string name="valider">Enregister</string>
    <string name="log_out">Se déconnecter</string>
    <string name="underlined_text"><u>Enregistrement</u></string>
    <string name="select_start_time">Sélectionnez l\'heure de début</string>
    <string name="select_end_time">Sélectionnez l\'heure de fin</string>
    <string name="add_to_agenda">Ajouter à agenda</string>
    <string name="collect_date">A quelle date voulez vous réaliser la tâche ?</string>
    <string name="select_date">Selectionnez la date</string>
    <string name="assign_to_myyself">M\'assigner</string>
    <string name="preference_file_key">greentrackprefs</string>

</resources>